--- a/src/envs/configs/buggy_env_mujoco.yaml
+++ b/src/envs/configs/buggy_env_mujoco.yaml
@@ -1,4 +1,9 @@
 "rate" : 100
 "render" : True
 "n_substeps" : 10
+"state_dim" : 5
 "n_traj_pts" : 15
+"allow_latent_input" : False
+"latent_dim" : 5
+"allow_lte" : False
+"lte_prob" : 0.3
