Fix buggy env bug

--- a/src/opt/configs/train_buggy_a2c.yaml
+++ b/src/opt/configs/train_buggy_a2c.yaml
@@ -1,6 +1,6 @@
 # Train config
-"train" : True
-"render" : False
+"train" : False
+"render" : True
 "default_session_ID" : "TRN"
 "cma_std" : 0.3
 "iters" : 4000000
