--- a/src/opt/configs/train_buggy_a2c.yaml
+++ b/src/opt/configs/train_buggy_a2c.yaml
@@ -1,8 +1,8 @@
 # Train config
 "train" : True
-"render" : False
+"render" : True
 "default_session_ID" : "TRN"
-"iters" : 8000000
+"iters" : 10000000
 "n_trials" : 2000
 
 # RL algo
@@ -14,7 +14,7 @@
 "vf_coef" : 0.6
 "ent_coef" : 0.00001
 "max_grad_norm" : 0.7
-"learning_rate" : 0.0005
+"learning_rate" : 0.0001
 "alpha" : 0.99
 "epsilon" : 0.00001
 "verbose" : 1
