Modify initial traj

--- a/src/opt/configs/train_buggy_a2c.yaml
+++ b/src/opt/configs/train_buggy_a2c.yaml
@@ -1,8 +1,8 @@
 # Train config
-"train" : False
+"train" : True
 "render" : True
 "default_session_ID" : "TRN"
-"iters" : 10000000
+"iters" : 10000
 "n_trials" : 2000
 
 # RL algo
