--- a/src/opt/configs/train_buggy_a2c.yaml
+++ b/src/opt/configs/train_buggy_a2c.yaml
@@ -3,18 +3,18 @@
 "render" : True
 "default_session_ID" : "TRN"
 "iters" : 2000000
-"n_trials" : 2000
+"n_eval" : 2000000
 
 # RL algo
 "algo_name" : "A2C"
 "policy_name" : "MlpPolicy" # "MlpLstmPolicy", "MlpPolicy"
-"n_envs" : 6
-"gamma" : 0.995
+"n_envs" : 4
+"gamma" : 0.999
 "n_steps" : 30
 "vf_coef" : 0.6
 "ent_coef" : 0.00001
 "max_grad_norm" : 1.0
-"learning_rate" : 0.0001
+"learning_rate" : 0.0003
 "alpha" : 0.99
 "epsilon" : 0.00001
 "verbose" : 1
