--- a/src/opt/configs/train_buggy_a2c.yaml
+++ b/src/opt/configs/train_buggy_a2c.yaml
@@ -2,19 +2,19 @@
 "train" : True
 "render" : False
 "default_session_ID" : "TRN"
-"iters" : 30000000
+"iters" : 14000000
 "n_eval" : 2000000
 
 # RL algo
 "algo_name" : "A2C"
 "policy_name" : "MlpPolicy" # "MlpLstmPolicy", "MlpPolicy"
 "n_envs" : 4
-"gamma" : 0.99
-"n_steps" : 30
+"gamma" : 0.9819
+"n_steps" : 33
 "vf_coef" : 0.6
-"ent_coef" : 0.00001
-"max_grad_norm" : 1.0
-"learning_rate" : 0.0001
+"ent_coef" : 3e-6
+"max_grad_norm" : 0.75
+"learning_rate" : 0.000395
 "alpha" : 0.99
 "epsilon" : 0.00001
 "verbose" : 1
