--- a/src/opt/configs/train_buggy_a2c.yaml
+++ b/src/opt/configs/train_buggy_a2c.yaml
@@ -12,7 +12,7 @@
 "gamma" : 0.9819
 "n_steps" : 33
 "vf_coef" : 0.6
-"ent_coef" : 3e-6
+"ent_coef" : 0.000003
 "max_grad_norm" : 0.75
 "learning_rate" : 0.000395
 "alpha" : 0.99
