Transfer to server

--- a/src/opt/configs/train_buggy_a2c.yaml
+++ b/src/opt/configs/train_buggy_a2c.yaml
@@ -1,6 +1,6 @@
 # Train config
-"train" : True
-"render" : false
+"train" : False
+"render" : True
 "default_session_ID" : "TRN"
 "iters" : 6000000
 "n_eval" : 2000000
