Transfer to server

--- a/src/opt/configs/train_buggy_a2c.yaml
+++ b/src/opt/configs/train_buggy_a2c.yaml
@@ -1,15 +1,15 @@
 # Train config
-"train" : False
-"render" : True
+"train" : True
+"render" : False
 "default_session_ID" : "TRN"
-"iters" : 6000000
+"iters" : 3000000
 "n_eval" : 2000000
 
 # RL algo
 "algo_name" : "A2C"
 "policy_name" : "MlpPolicy" # "MlpLstmPolicy", "MlpPolicy"
 "n_envs" : 6
-"gamma" : 0.99
+"gamma" : 0.999
 "n_steps" : 33
 "vf_coef" : 0.6
 "ent_coef" : 0.000003
