--- a/src/opt/configs/train_buggy_a2c.yaml
+++ b/src/opt/configs/train_buggy_a2c.yaml
@@ -1,8 +1,8 @@
 # Train config
-"train" : False
-"render" : True
+"train" : True
+"render" : False
 "default_session_ID" : "TRN"
-"iters" : 6000000
+"iters" : 60000
 
 # RL algo
 "algo_name" : "A2C"
