Add enforcing bilateral symmetry

--- a/src/envs/configs/buggy_env_mujoco.yaml
+++ b/src/envs/configs/buggy_env_mujoco.yaml
@@ -15,4 +15,4 @@
 "traj_smoothness" : 500
 "traj_smoothness_variance" : 200
 "act_pen" : 0.013
-"enforce_bilateral_symmetry" : True
+"enforce_bilateral_symmetry" : False
