--- a/src/opt/configs/train_buggy_a2c.yaml
+++ b/src/opt/configs/train_buggy_a2c.yaml
@@ -1,8 +1,8 @@
 # Train config
-"train" : False
+"train" : True
 "render" : False
 "default_session_ID" : "TRN"
-"iters" : 3000000
+"iters" : 4000000
 
 # RL algo
 "algo_name" : "A2C"
