Refactor env and engines

--- a/src/envs/configs/buggy_env_mujoco.yaml
+++ b/src/envs/configs/buggy_env_mujoco.yaml
@@ -2,13 +2,16 @@
 "rate" : 100
 "render" : True
 "n_substeps" : 2
-"state_dim" : 5
-"n_traj_pts" : 15
 "randomize_env" : False
 "allow_latent_input" : False
+"state_dim" : 3
 "latent_dim" : 4
-"allow_lte" : True
+
+# LTE
+"allow_lte" : False
 "lte_prob" : 1.0
+
+"n_traj_pts" : 15
 "wp_sample_dist" : 0.17
 "wp_reach_dist" : 0.3
 "max_steps" : 300
@@ -16,4 +19,3 @@
 "traj_smoothness_variance" : 200
 "act_pen" : 0.013
 "enforce_bilateral_symmetry" : False
-"use_engine_2" : False
