Write maize free evaluation for mppi and add spline resampling

--- a/src/envs/configs/buggy_maize_env_mujoco.yaml
+++ b/src/envs/configs/buggy_maize_env_mujoco.yaml
@@ -6,6 +6,8 @@
 "state_dim" : 3
 "latent_dim" : 4
 "car_xml" : "one_car_maize"
+"rew_type" : "free" # traj/free
+"n_blocks" : 8
 
 # LTE
 "allow_lte" : False
@@ -22,7 +24,7 @@
 
 "n_traj_pts" : 15
 "wp_sample_dist" : 0.17
-"wp_reach_dist" : 0.3
+"wp_reach_dist" : 0.5
 "max_steps" : 300
 "traj_smoothness" : 500
 "traj_smoothness_variance" : 200
