Make more detailed plan

--- a/src/envs/configs/buggy_maize_env_mujoco.yaml
+++ b/src/envs/configs/buggy_maize_env_mujoco.yaml
@@ -6,7 +6,7 @@
 "state_dim" : 3
 "latent_dim" : 4
 "car_xml" : "one_car_maize"
-"rew_type" : "free" # traj/free
+"rew_type" : "traj" # traj/free
 "n_blocks" : 8
 
 # LTE
