--- a/src/envs/configs/buggy_maize_env_mujoco.yaml
+++ b/src/envs/configs/buggy_maize_env_mujoco.yaml
@@ -7,6 +7,7 @@
 "latent_dim" : 4
 "car_xml" : "one_car_maize"
 "rew_type" : "traj" # traj/free
+"deadzone" : 0.25 # traj/free
 "n_blocks" : 8
 
 # LTE
