--- a/src/opt/configs/train_buggy_a2c.yaml
+++ b/src/opt/configs/train_buggy_a2c.yaml
@@ -1,8 +1,8 @@
 # Train config
 "train" : True
 "render" : False
-"default_session_ID" : "TRN"
-"iters" : 1000000
+"default_session_ID" : "TRN_DEF"
+"iters" : 3000000
 "env" : "default" # default/maize
 
 # RL algo
